--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -2,8 +2,8 @@ name: Scraper
 
 "on":
   schedule:
-    # Run every hour at minute 0 UTC (adjust as needed)
-    - cron: '0,5,10,15,20,25,30,35,40,45,50,55 * * * *'
+    # Run every 5 min
+    # - cron: '0,5,10,15,20,25,30,35,40,45,50,55 * * * *'
     - cron: '1,6,11,16,21,26,31,36,41,46,51,56 * * * *'
   workflow_dispatch: # Allow manual triggering
     inputs:
