--- a/.github/workflows/scraper3.yml
+++ b/.github/workflows/scraper3.yml
@@ -1,10 +1,9 @@
-name: Scraper
+name: Scraper3
 
-"on":
+on:
   schedule:
     # Run every 5 min
-    # - cron: '0,5,10,15,20,25,30,35,40,45,50,55 * * * *'
-    - cron: '1,6,11,16,21,26,31,36,41,46,51,56 * * * *'
+    - cron: '3,8,13,18,23,28,33,38,43,48,53,58 * * * *'
   workflow_dispatch: # Allow manual triggering
     inputs:
       scraping_url:
