Update scraper0.yml (fix syntax error)

--- a/.github/workflows/scraper0.yml
+++ b/.github/workflows/scraper0.yml
@@ -1,7 +1,7 @@
 name: Scraper0
 
 on:
-  schedule:
+  # schedule:
     # Run every 5 min
     # - cron: '0,5,10,15,20,25,30,35,40,45,50,55 * * * *'
   workflow_dispatch: # Allow manual triggering
