--- a/.github/workflows/scraper2.yml
+++ b/.github/workflows/scraper2.yml
@@ -21,10 +21,10 @@ jobs:
       with:
         python-version: '3.9'
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+    # - name: Install dependencies
+    #   run: |
+    #     python -m pip install --upgrade pip
+    #     pip install -r requirements.txt
         
     - name: Run scraper
       env:
