--- a/.github/workflows/scraper2.yml
+++ b/.github/workflows/scraper2.yml
@@ -21,6 +21,9 @@ jobs:
       with:
         python-version: '3.9'
 
+    - name: Install dependencies
+      run: pip install -r requirements.txt
+    
     # - name: Install dependencies
     #   run: |
     #     python -m pip install --upgrade pip
