--- a/.github/workflows/scraper2.yml
+++ b/.github/workflows/scraper2.yml
@@ -1,7 +1,7 @@
 name: Scraper2
 
 on:
-  workflow_dispatch: # Allow manual triggering
+  workflow_dispatch:
     inputs:
       scraping_url:
         description: 'URL to scrape'
@@ -21,18 +21,36 @@ jobs:
       with:
         python-version: '3.9'
 
-    - name: Install dependencies
-      run: pip install -r requirements.txt
-    
-    # - name: Install dependencies
-    #   run: |
-    #     python -m pip install --upgrade pip
-    #     pip install -r requirements.txt
-        
-    - name: Run scraper
+    - name: Restore pip & venv cache
+      id: cache-pip-venv
+      uses: actions/cache@v4
+      with:
+        path: |
+          ~/.cache/pip
+          .venv
+        # include OS and python version so caches don't get reused across incompatible envs
+        key: ${{ runner.os }}-pip-3.9-${{ hashFiles('requirements.txt') }}
+        restore-keys: |
+          ${{ runner.os }}-pip-3.9-
+
+    - name: Create virtualenv (if missing)
+      run: |
+        if [ ! -d ".venv" ]; then
+          python -m venv .venv
+        fi
+
+    - name: Install dependencies (only if cache miss)
+      if: steps.cache-pip-venv.outputs.cache-hit != 'true'
+      run: |
+        source .venv/bin/activate
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+
+    - name: Ensure venv activated and run scraper
       env:
         TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
         TELEGRAM_CHANNEL_ID: ${{ secrets.TELEGRAM_CHANNEL_ID }}
         SCRAPING_URL: ${{ inputs.scraping_url || vars.SCRAPING_URL }}
       run: |
+        source .venv/bin/activate
         python scraper.py
